--- a/viewer.html
+++ b/viewer.html
@@ -412,8 +412,7 @@ See https://github.com/adobe-type-tools/cmap-resources
                   </p>
                   <span class="text-muted font-weight-bold">Voisins actuels :</span>
                   <ul id="neigbhours" class="text-info mt-0">
-                    <li>Poste "alpha2"</li>
-                    <li>OCR "Bonabéri alpha2 (ouvert vers grand hangar)"</li>
+                    <li class="text-danger"><i>Aucuns voisins !</i></li>
                   </ul>
                 </div>
 
@@ -427,12 +426,12 @@ See https://github.com/adobe-type-tools/cmap-resources
               <div id="record">
                 <h4 class="mt-5 text-center">Données enregistrées</h4>
                 <ul>
-                  <li>Type : "IACM"</li>
+            <!--  <li>Type : "IACM"</li>
                   <li>Nom : "maVie"</li>
                   <li>Code : "1125457"</li>
                   <li>Agence : "bonassama"</li>
                   <li>DEX : "DLA OUEST"</li>
-                  <li>Localisation : "Bonabéri Grand hangar"</li>
+                  <li>Localisation : "Bonabéri Grand hangar"</li>   -->
                 </ul>
               </div>
             </div>
@@ -461,7 +460,7 @@ See https://github.com/adobe-type-tools/cmap-resources
               </table>
 
               <h3 class="font-weight-bolder mb-4">Commander l'OCR ou IACM :</h3>
-              <form method="post" action="rien.php">
+              <form>
                 <div class="form-group">
 
                   <label class="font-weight-bold" title="Organe de coupure fermé"><input type="radio" name="theCommand" value="close">FERMER</label>
@@ -482,11 +481,6 @@ See https://github.com/adobe-type-tools/cmap-resources
 
               </form>
 
-              <h4 class="mt-5 text-center">Autres informations</h4>
-              <ul id="othersInfos">
-                <li>Agence : "bonassama"</li>
-                <li>Code : "1125457"</li>
-              </ul>
 
             </div>
           </div>
