--- a/rapportPage.html
+++ b/rapportPage.html
@@ -41,13 +41,15 @@
 
         <div id="rapportDepart">
             <div class="card-footer pb-4" style="font-size: 1.1em">
-                <h2 class="h2 offset-md-1">Depart <i id="nomDepart">D113 Koumassi</i></h2>
-                <p id="limitDepart">Limite du départ : <i class="badge badge-pill badge-info text-monospace">cicam (ouvert vers sic cacaos)</i>
+                <h2 class="h2 offset-md-1">Depart <i id="nomDepart"></i></h2>
+                <p id="limitDepart">
+                    <!--Limite du départ : <i class="badge badge-pill badge-info text-monospace">cicam (ouvert vers sic cacaos)</i>
                     <i class="badge badge-pill badge-info text-monospace">cicam (ouvert vers sic cacaos)</i>
                     <i class="badge badge-pill badge-info text-monospace">cicam (ouvert vers sic cacaos)</i>
-                    <i class="badge badge-pill badge-info text-monospace">a-b-c-b</i></p>
-                <p class="d-inline">Nombre de poste installé : <i id="nbrePostesDepart" class="badge badge-pill badge-danger">120</i> postes.</p>
-                <p class="d-inline offset-1">Puissance installée : <i id="puiDepart" class="badge badge-pill badge-danger">894</i> MW.</p>
+                    <i class="badge badge-pill badge-info text-monospace">a-b-c-b</i>-->
+                </p>
+                <p class="d-inline">Nombre de poste installé : <i id="nbrePostesDepart" class="badge badge-pill badge-danger"></i> postes.</p>
+                <p class="d-inline offset-1">Puissance installée : <i id="puiDepart" class="badge badge-pill badge-danger"></i> MW.</p>
             </div>
 
             <div class="container mt-4 border" style="width: 80%">
@@ -69,14 +71,14 @@
                     <tbody>
                     <tr>
                         <td class="OUEST">
+                            <!--<p>Agences <strong>???</strong> : <strong>???</strong> postes, <strong>???</strong> MW</p>
                             <p>Agences <strong>???</strong> : <strong>???</strong> postes, <strong>???</strong> MW</p>
-                            <p>Agences <strong>???</strong> : <strong>???</strong> postes, <strong>???</strong> MW</p>
-                            <p>Agences <strong>???</strong> : <strong>???</strong> postes, <strong>???</strong> MW</p>
+                            <p>Agences <strong>???</strong> : <strong>???</strong> postes, <strong>???</strong> MW</p>-->
                         </td>
-                        <td class="EST">Agences <strong>???</strong> : <strong>???</strong> postes, <strong>???</strong> MW</td>
-                        <td class="SUD">Agences <strong>???</strong> : <strong>???</strong> postes, <strong>???</strong> MW</td>
-                        <td class="NORD">Agences <strong>???</strong> : <strong>???</strong> postes, <strong>???</strong> MW</td>
-                        <td class="CENTRE">Agences <strong>???</strong> : <strong>???</strong> postes, <strong>???</strong> MW</td>
+                        <td class="EST"></td>
+                        <td class="SUD"></td>
+                        <td class="NORD"></td>
+                        <td class="CENTRE"></td>
                     </tr>
                     </tbody>
 
@@ -86,10 +88,8 @@
     </div>
 
 
-    <script src="development_jQuery 3.4.1.js"></script>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <script src="development_jQuery 3.4.1.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
     <script src="rapportPageDynamism.js"></script>
